Refactor export, add CSV Links export and add other changes on DAO and DbIterator